k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kube-cert-manager
  name: kube-cert-manager
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-cert-manager
      name: kube-cert-manager
    spec:
      serviceAccountName: kube-cert-manager
      containers:
        - name: kube-cert-manager
          image: ctriv/kube-cert-manager:build-4
          args:
            - "-acme-url=https://acme-staging.api.letsencrypt.org/directory"
            # NOTE: the URL above points to the staging server, where you won't get real certs.
            # Uncomment the line below to use the production LetsEncrypt server:
            #- "-acme-url=https://acme-v01.api.letsencrypt.org/directory"
            # You can run multiple instances of kube-cert-manager for the same namespace(s),
            # each watching for a different value for the 'class' label
            #- "-class=default"
            # You can choose to monitor only some namespaces, otherwise all namespaces will be monitored
            #- "-namespaces=default,test"
            # If you set a default email, you can omit the field/annotation from Certificates/Ingresses
            - "-default-email=techdev-mwc@liquidweb.com"
            # If you set a default provider, you can omit the field/annotation from Certificates/Ingresses
            - "-default-provider=http"
            # PostreSQL database hostname
            - "-db-host=localhost"
            # PostreSQL database port
            - "-db-port=5432"
            # PostreSQL database username
            - "-db-username=certmanager"
            # PostreSQL database name
            - "-db-name=certmanager"
            # PostreSQL database password
            - "-db-password=Pass1234"
            # PostreSQL database sslmode
            - "-db-sslmode=disable"
